# CourseProject

./: .gitattributes  AcromRegular.cw127.pkl  AcromRegular.pkl  CMakeLists.txt  README.md  extractingAttributes.py  main.cpp  pythonscript.py  requirements.txt
ModelNER/: createSpacyFile.py  dev.spacy  test_train_data.json  train.spacy  train_data.json
ModelNER/output/model-best/: meta.json
ModelNER/output/model-best/ner/: model  moves
ModelNER/output/model-best/vocab/: strings.json
ModelNER/output/model-last/: meta.json
ModelNER/output/model-last/ner/: model
ModelNER/output/model-last/vocab/: strings.json
model-best/: meta.json
model-best/ner/: moves
