cmake_minimum_required(VERSION 3.26)
project(CourseProject)

set(CMAKE_CXX_STANDARD 23)

add_executable(CourseProject main.cpp)

#include_directories("C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python38\\include")
#link_libraries("C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python38\\libs\\python38.lib")
